fixed total header in order book was hidden on small block sizes

--- a/src/styles/components/terminal/_terminal.scss
+++ b/src/styles/components/terminal/_terminal.scss
@@ -447,6 +447,9 @@
 					td:nth-child(3),th:nth-child(3){
 						width: 35%;
 					}
+					th:nth-child(3) {
+						overflow: visible;
+					}
 					// th{
 					// 	padding: 5px 15px;
 					// }
